blobhash.h: Remove extra fallthrough annotation

Remove the [[fallthrough]] annotation at the end of the switch statement
for Clang compatibility.

Fixes: https://tracker.ceph.com/issues/40052
Signed-off-by: Thomas Johnson <NTmatter@gmail.com>